--- a/src/AutomatedCar/AutomatedCar.csproj
+++ b/src/AutomatedCar/AutomatedCar.csproj
@@ -12,6 +12,7 @@
       <SubType>Designer</SubType>
     </AvaloniaResource>
     <AvaloniaResource Include="Assets\**" />
+    <Folder Include="SystemComponents\Packets\Sensor\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Assets\**;Resources\**" />
